modules/web/css/ballerina-file-editor.css
/* ... */
.annotation-attachment-error {
    /*border: 1px solid red;*/
}

.annotation-attribute-error {
    /*border: 1px solid red;*/
}

.annotation-attachment-text-li > span, .attribute-value-array li > span, .attribute-value-annotation li > span {
    padding-right: 7px;
}

.annotation-attachment-text-li > span, .attribute-value-array li > span, .attribute-value-annotation li > span :hover{
    cursor: pointer;
}

.popout-button-wrapper i {
    padding-top: 4px;
    font-size: 9px;
    color: #a9a9a9;
    cursor: pointer;
}

.popout-button-wrapper i:hover {
    color: #000;
}

.annotation-attribute-value-wrapper, .annotation-attachment-name {
    padding-left: 5px;
}

.annotations-attribute-close-square-bracket {
    padding-left: 3px;
}

.bal-file-editor-loading-container {
    z-index: 1000;
    text-align: center;
    vertical-align: center;
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgb(60, 60, 60);
    color: white;
    opacity: 0.5;
}

.syntax-errors-container {
    left: 5%;
    top: 5%;
    width: 90%;
    position: absolute;
}

#parse-pending-loader{
    left: calc(50% - 132px);
    top: 50%;
    position:absolute;
	width:234px;
    height:28px;
    font-size: 30px;
    margin:auto;
    color: #fff;
    font-weight: 500;
}

#parse-pending-loader:after {
    overflow: hidden;
    vertical-align: bottom;
    -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
    animation: ellipsis steps(4,end) 900ms infinite;
    content: "\2026"; /* ascii code for the ellipsis character */
    width: 0px;
    display: block;
    margin-top: -40px;
    margin-left: 93px;
    font-size: 50px;
}

@keyframes ellipsis {
  to {
    width: 1.25em;
  }
}

@-webkit-keyframes ellipsis {
  to {
    width: 1.25em;
  }
}


.loading-overlay-enter {
  opacity: 0.01;
}

.loading-overlay-enter.loading-overlay-enter-active {
  opacity: 0.5;
  transition: opacity 300ms ease-in;
}

.loading-overlay-leave {
  opacity: 0.5;
}

.loading-overlay-leave.loading-overlay-leave-active {
  opacity: 0.01;
  transition: opacity 300ms ease-in;
}

.bal-file-editor {
    height: 100%;
}

